@@ -15,6 +15,8 @@
     ADDED: buttons "(un)mount" and "eject" in mountman gui
     ADDED: KMountMan::removable(), KMountMan::networkFilesystem()
 
+  CHANGED: when open/refresh of a dir fails, don't annoy the user with a message box,
+           but display the error in the status bar
   CHANGED: icon size, icons/previews on/off are set seperately per view type
   CHANGED: dim icons in unfocused panel (if dim colors is activated)
   CHANGED: mountman gui: retrieve icons from Solid
